# FiGuRO

./: README.md  pyproject.toml  requirements.txt
examples/: figuro_swiss_roll_example.ipynb
src/: figuro.py
